update quiz, favorite - controller, service 11/8